Update hadoop-common-project to 2.9.1